[RePluginDemo][host&plugin1]增加宿主和插件交互的简单测试(注:宿主加载插件的fragment没有解决)

--- a/host/app/src/main/res/layout/activity_main.xml
+++ b/host/app/src/main/res/layout/activity_main.xml
@@ -31,5 +31,21 @@
             android:text="启动插件新进程"
             android:layout_marginBottom="10dp"
             />
+
+        <Button
+            android:id="@+id/btn_plugin1_result_activity"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="测试插件的forResult()"
+            android:layout_marginBottom="10dp"
+            />
+
+        <Button
+            android:id="@+id/btn_plugin1_fragment"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="测试插件中的Fragment"
+            android:layout_marginBottom="10dp"
+            />
     </LinearLayout>
 </ScrollView>
