--- a/host/app/src/main/res/layout/activity_plugin_fragment.xml
+++ b/host/app/src/main/res/layout/activity_plugin_fragment.xml
@@ -5,12 +5,18 @@
     android:layout_weight="2"
     android:orientation="vertical">
 
-<!--    <fragment
+    <!--<fragment
         android:id="@+id/fragment"
         class="com.test.android.plugin1.fragment.Plugin1Demo1Fragment"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1" />-->
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:background="#55ff0000"
+        android:layout_weight="1"/>
 
     <!-- line -->
     <LinearLayout
