--- a/plugins/plugin1/app/src/main/res/layout/activity_inner1.xml
+++ b/plugins/plugin1/app/src/main/res/layout/activity_inner1.xml
@@ -5,12 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".InnerActivity"
+    tools:context=".activity.InnerActivity"
     >
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="0dp"
+        android:textAllCaps="false"
         android:text="这是插件内部启动的Activity"
         android:gravity="center"
         android:layout_weight="1"
