[RePluginDemo][provider]增加宿主和插件对Porvider的测试

--- a/host/app/src/main/res/layout/activity_main.xml
+++ b/host/app/src/main/res/layout/activity_main.xml
@@ -60,5 +60,23 @@
             android:text="测试插件中的Intent-Filter"
             android:layout_marginBottom="10dp"
             />
+
+        <Button
+            android:id="@+id/btn_plugin1_file_provider"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAllCaps="false"
+            android:text="测试插件中的File Provider"
+            android:layout_marginBottom="10dp"
+            />
+
+        <Button
+            android:id="@+id/id_btn_plugin1_provider"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAllCaps="false"
+            android:layout_marginBottom="10dp"
+            android:text="测试插件中的Provider读写数据"
+            />
     </LinearLayout>
 </ScrollView>
