--- a/plugins/plugin1/app/src/main/res/values/styles.xml
+++ b/plugins/plugin1/app/src/main/res/values/styles.xml
@@ -12,4 +12,12 @@
     <!--<style name="Pluing1Theme" parent="Theme.AppCompat.Light.DarkActionBar">
         <item name="android:background">#3300ff00</item>
     </style>-->
+
+    <!--<style name="Plugin1Theme1" parent="Theme.AppCompat.Light.DarkActionBar">
+        &lt;!&ndash; Customize your theme here. &ndash;&gt;
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+
+    </style>-->
 </resources>
