--- a/plugins/plugin1/app/src/main/res/layout/activity_main.xml
+++ b/plugins/plugin1/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp"
+    android:paddingTop="16dp"
+    android:paddingBottom="16dp"
     android:orientation="vertical"
     tools:context=".MainActivity"
     >
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        >
 
     <Button
         android:id="@+id/id_btn_start_inner_activity"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAllCaps="false"
+        android:layout_marginBottom="10dp"
         android:text="启动插件内部Activity"
         />
 
@@ -21,6 +31,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAllCaps="false"
+        android:layout_marginBottom="10dp"
         android:text="启动宿主Activity"
         />
 
@@ -29,6 +40,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAllCaps="false"
+        android:layout_marginBottom="10dp"
         android:text="启动standard类型的Activity"
         />
 
@@ -37,6 +49,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAllCaps="false"
+        android:layout_marginBottom="10dp"
         android:text="启动SingleTop类型的Activity"
         />
 
@@ -45,6 +58,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAllCaps="false"
+        android:layout_marginBottom="10dp"
         android:text="启动SingleTask类型的Activity"
         />
 
@@ -53,6 +67,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAllCaps="false"
+        android:layout_marginBottom="10dp"
         android:text="启动SingleInstance类型的Activity"
         />
 
@@ -61,6 +76,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAllCaps="false"
+        android:layout_marginBottom="10dp"
         android:text="通过intent-filter启动Activity"
         />
 
@@ -69,6 +85,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAllCaps="false"
+        android:layout_marginBottom="10dp"
         android:text="发送通知消息"
         />
 
@@ -77,6 +94,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAllCaps="false"
+        android:layout_marginBottom="10dp"
         android:text="跳转到设置Activity"
         />
 
@@ -85,6 +103,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAllCaps="false"
+        android:layout_marginBottom="10dp"
         android:text="跳转到TaskAffinity Activity"
         />
 
@@ -93,7 +112,27 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAllCaps="false"
+        android:layout_marginBottom="10dp"
         android:text="跳转到带自定义主题的Activity"
         />
 
-</LinearLayout>
+    <Button
+        android:id="@+id/id_btn_start_file_provider_activity"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAllCaps="false"
+        android:layout_marginBottom="10dp"
+        android:text="跳转到File Provider Activity"
+        />
+
+        <Button
+            android:id="@+id/id_btn_start_provider"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAllCaps="false"
+            android:layout_marginBottom="10dp"
+            android:text="测试Provider读写数据"
+            />
+
+    </LinearLayout>
+</ScrollView>
