[RePluginDemo][jobservice]尝试在宿主中使用jobservice，测试不通过

--- a/host/app/src/main/res/layout/activity_main.xml
+++ b/host/app/src/main/res/layout/activity_main.xml
@@ -135,5 +135,14 @@
             android:text="调用插件2中so库中的方法"
             />
 
+        <Button
+            android:id="@+id/id_btn_test_update_plugins"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAllCaps="false"
+            android:layout_marginBottom="10dp"
+            android:text="安装（更新）文件夹中的插件"
+            />
+
     </LinearLayout>
 </ScrollView>
