--- a/plugins/plugin2/app/src/main/res/layout/activity_main.xml
+++ b/plugins/plugin2/app/src/main/res/layout/activity_main.xml
@@ -35,7 +35,44 @@
             android:layout_height="wrap_content"
             android:textAllCaps="false"
             android:layout_marginBottom="10dp"
+            android:enabled="false"
             android:text="测试so库的调用"
+            />
+
+        <EditText
+            android:id="@+id/id_edt_test"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAllCaps="false"
+            android:layout_marginBottom="10dp"
+            android:hint="这个是测试EditText用例--7.8.2"
+            />
+
+        <Button
+            android:id="@+id/id_btn_start_receiver_service"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAllCaps="false"
+            android:layout_marginBottom="10dp"
+            android:text="测试广播中startService()"
+            />
+
+        <Button
+            android:id="@+id/id_btn_start_job_service"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAllCaps="false"
+            android:layout_marginBottom="10dp"
+            android:text="开始测试JobService"
+            />
+
+        <Button
+            android:id="@+id/id_btn_cancel_job_service"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAllCaps="false"
+            android:layout_marginBottom="10dp"
+            android:text="取消JobService"
             />
 
     </LinearLayout>
